front-end/src/components/Header/Header.module.css
.header_sub,
.logo_and_text,
.buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 0.5em;
  flex-wrap: wrap;
}

.header {
  position: sticky;
  padding: 0.5em;
  top: 0;
  left: 0;
  right: 0;
}

.header_sub {
  width: min(var(--breakout-max-width), 100%);
  margin-inline: auto;

  height: 4rem;

  background-color: hsl(206, 78%, 95%);

  gap: 1em;
  padding: 0.5em;
  border-radius: 0.5em;

  transition: ease-out 0.4s box-shadow;
}

.header[data-scrolled="true"] .header_sub {
  box-shadow: 0 0.125em 0.5em -0.125em hsla(0, 0%, 0%, 0.5);
}

.header_effect_color {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: -1;
  pointer-events: none;
  height: 4rem;
  background: linear-gradient(180deg, hsl(0, 0%, 100%) 0%, transparent 100%);
}

.logo {
  width: 3rem;
  height: 3rem;
}

.logo_text {
  font-size: 1.5rem;
  font-weight: 600;
  font-family: Domine, serif;
}

